modif visitPrint